syntax = "proto3";

import "github.com/relab/gorums/gorums.proto";

package gorums;

service Raft {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {
      option (gorums.qrpc) = true;
  }

  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {
      option (gorums.qrpc) = true;
  }
}

message Entry {
  uint64 term = 1;

  bytes data = 2;
}

message RequestVoteRequest {
  int64 candidateID = 1;

  uint64 term = 2;
  uint64 lastLogIndex = 3;
  uint64 lastLogTerm = 4;
}

message RequestVoteResponse {
  uint64 term = 1;

  bool voteGranted = 2;
}

message AppendEntriesRequest {
  int64 leaderID = 1;

  uint64 term = 2;
  uint64 prevLogIndex = 3;
  uint64 prevLogTerm = 4;
  uint64 commitIndex = 5;

  repeated Entry entries = 6;
}

message AppendEntriesResponse {
  int64 followerID = 1;

  uint64 term = 2;
  uint64 matchIndex = 3;

  bool success = 4;
}
